--- a/client/public/WhackARat/index.html
+++ b/client/public/WhackARat/index.html
@@ -3,19 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
     <title>Whack-a-Rat</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <h1>Whack-a-Rat</h1>
-  <div id="game-container">
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-    <div class="hole"></div>
-    <div class="hole"></div>
-  </div>
- <link rel= "script" href="script.js">
+    <div id="game-container">
+        <div class="hole">
+            <img src="https://p1.hiclipart.com/preview/729/983/751/geologist-s-hammer-claw-hammer-tool-hammer-lump-hammer-geologists-hammer-stonemasons-hammer-metalworking-hand-tool-ballpeen-hammer-framing-hammer-mallet-png-clipart.jpg" class="hammer">
+            <img src="https://t4.ftcdn.net/jpg/00/12/42/29/360_F_12422925_uqMDZKFDRUlrA0XqKBvKmfwQ6Cq8hpKR.jpg" class="rat">
+        </div>
+        <div class="hole">
+            <img src="https://p1.hiclipart.com/preview/729/983/751/geologist-s-hammer-claw-hammer-tool-hammer-lump-hammer-geologists-hammer-stonemasons-hammer-metalworking-hand-tool-ballpeen-hammer-framing-hammer-mallet-png-clipart.jpg" class="hammer">
+            <img src="https://t4.ftcdn.net/jpg/00/12/42/29/360_F_12422925_uqMDZKFDRUlrA0XqKBvKmfwQ6Cq8hpKR.jpg" class="rat">
+        </div>
+        <div class="hole">
+            <img src="https://p1.hiclipart.com/preview/729/983/751/geologist-s-hammer-claw-hammer-tool-hammer-lump-hammer-geologists-hammer-stonemasons-hammer-metalworking-hand-tool-ballpeen-hammer-framing-hammer-mallet-png-clipart.jpg" class="hammer">
+            <img src="https://t4.ftcdn.net/jpg/00/12/42/29/360_F_12422925_uqMDZKFDRUlrA0XqKBvKmfwQ6Cq8hpKR.jpg" class="rat">
+        </div>
+        <div class="hole">
+            <img src="https://p1.hiclipart.com/preview/729/983/751/geologist-s-hammer-claw-hammer-tool-hammer-lump-hammer-geologists-hammer-stonemasons-hammer-metalworking-hand-tool-ballpeen-hammer-framing-hammer-mallet-png-clipart.jpg" class="hammer">
+            <img src="https://t4.ftcdn.net/jpg/00/12/42/29/360_F_12422925_uqMDZKFDRUlrA0XqKBvKmfwQ6Cq8hpKR.jpg" class="rat">
+        </div>
+        <div class="hole">
+            <img src="https://p1.hiclipart.com/preview/729/983/751/geologist-s-hammer-claw-hammer-tool-hammer-lump-hammer-geologists-hammer-stonemasons-hammer-metalworking-hand-tool-ballpeen-hammer-framing-hammer-mallet-png-clipart.jpg" class="hammer">
+            <img src="https://t4.ftcdn.net/jpg/00/12/42/29/360_F_12422925_uqMDZKFDRUlrA0XqKBvKmfwQ6Cq8hpKR.jpg" class="rat">
+        </div>
+      <div class="hole">
+          <img src="https://p1.hiclipart.com/preview/729/983/751/geologist-s-hammer-claw-hammer-tool-hammer-lump-hammer-geologists-hammer-stonemasons-hammer-metalworking-hand-tool-ballpeen-hammer-framing-hammer-mallet-png-clipart.jpg" class="hammer">
+          <img src="https://t4.ftcdn.net/jpg/00/12/42/29/360_F_12422925_uqMDZKFDRUlrA0XqKBvKmfwQ6Cq8hpKR.jpg" class="rat">
+      </div>
+    </div>
+    <div class="score">0</div>
+    <script src="script.js"></script>
 </body>
 </html>
